# ANY-Game-in-VR

./: .gitignore  QUEST_HEADPOSE_COMMANDS.md  README.md  dev.sh
config/: quest_headpose.env
mac_receiver/: Package.swift
mac_receiver/Sources/QuestHeadposeReceiver/: main.swift
mac_receiver_py/: quest_headpose_receiver.py
mac_streamer/: desktop_streamer.swift
quest_headpose_app/: settings.gradle.kts
quest_headpose_app/app/: build.gradle.kts
quest_headpose_app/app/src/main/: AndroidManifest.xml
quest_headpose_app/app/src/main/cpp/: CMakeLists.txt
quest_headpose_app/app/src/main/cpp/quest_headpose_xr/: desktop_stream_bridge.cpp  desktop_stream_bridge.h  graphicsplugin_opengles.cpp  main.cpp  openxr_program.cpp  openxr_program.h  options.h
quest_headpose_app/app/src/main/java/com/gamesinvr/questheadpose/: HeadposeService.kt  HeadposeState.kt  MainActivity.kt  OpenXrActivity.kt  OpenXrPoseBridge.kt  QuestHeadposeApp.kt  QuestPrefs.kt
quest_headpose_app/app/src/main/res/layout/: activity_main.xml
quest_headpose_app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
scripts/: quest_shortcut.sh  quest_shortcut_menu.applescript  run_desktop_streamer.sh  run_receiver.sh
